--- a/Style/layout/_main.scss
+++ b/Style/layout/_main.scss
@@ -1,16 +1,23 @@
+/**********************************************************************/
+
+/*Main*/
+
+/**********************************************************************/
+/*flex on main for center elements in page*/
 main {
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
 
+  /*card size and grid 2 columns*/
   .card {
     width: 731px;
     height: 280px;
     display: grid;
     grid-template-columns: 285px 446px;
 
-    /*media querie => change positi0on for tablette and mobile*/
+    /*media querie => change grid and size for tablette and mobile*/
     @media screen and (max-width: 900px) {
       width: 328px;
       height: 513px;
@@ -19,54 +26,57 @@ main {
       grid-template-rows: 201px 312px;
     }
   }
+  /*add img and border radius*/
   .card-left {
     background: url(..//../images/drawers.jpg) center/cover;
     border-radius: 8px 0 0 8px;
 
+    /*media querie => change border-radius for tablette and mobile*/
     @media screen and (max-width: 900px) {
       border-radius: 8px 8px 0 0;
     }
   }
-
+  /*background and padding */
   .card-right {
     background: white;
     border-radius: 0 8px 8px 0;
     padding: 30px;
-
+    /*media querie => change padding and flex*/
     @media screen and (max-width: 900px) {
       padding: 20px 20px 10px 20px;
       justify-content: space-around;
     }
-
+    /*txt size and margin*/
     h1 {
       font-size: 1.45rem;
       margin: 0 0 20px 0;
-
+      /*media querie => change size and margin*/
       @media screen and (max-width: 900px) {
         font-size: 1.2rem;
         margin: 20px 0 35px 0;
       }
     }
-
+    /*grid  3 columns*/
     .bottom-card {
       width: 100%;
       display: grid;
       grid-template-columns: 14% 76% 10%;
       justify-items: flex-start;
       margin: 30px 0 0 0;
-
+      /*media querie => change grid*/
       @media screen and (max-width: 900px) {
         display: grid;
         grid-template-columns: 18% 67% 15%;
         margin: 30px 0 0 0;
       }
     }
+    /*set img size and radius*/
     .img2 {
       width: 40px;
       height: 40px;
       border-radius: 50%;
     }
-
+    /*set txt size and letter spacing*/
     h2 {
       font-size: 0.9rem;
       letter-spacing: 0.5px;
@@ -75,7 +85,7 @@ main {
     span p {
       color: $GrayishBlue;
     }
-
+    /*set grey circle*/
     .circle {
       display: flex;
       justify-content: center;
@@ -90,7 +100,7 @@ main {
       &:hover {
         background: $VeryDarkGrayishBlue;
       }
-
+      /*set bottom share*/
       i {
         z-index: 1;
         transition: 0.3s;
@@ -105,14 +115,13 @@ main {
     }
   }
 }
-
+/*set popup*/
 .popup {
   text-align: left;
   cursor: pointer;
   position: absolute;
-
-  /*media querie => change position for tablette and mobile*/
-
+  z-index: 0;
+  /*flexbox for aligne elements*/
   .flexbox {
     display: flex;
     flex-direction: row;
@@ -134,6 +143,7 @@ main {
       transform: translateX(-36.75%);
       padding: 0 80px 0 0;
     }
+    /*after for do a triangle*/
     &:after {
       position: absolute;
       content: "";
@@ -148,7 +158,7 @@ main {
         display: none;
       }
     }
-
+    /*set txt*/
     h3 {
       color: $GrayishBlue;
       text-transform: uppercase;
@@ -161,6 +171,7 @@ main {
         transform: scale(1.1);
       }
     }
+    /*set img*/
     .img4,
     .img5,
     .img6 {
@@ -174,7 +185,7 @@ main {
     }
   }
 }
-
+/*for hide or not the popup => with javascipt */
 .hide {
   display: none;
 }
