--- a/Style/layout/_main.scss
+++ b/Style/layout/_main.scss
@@ -45,6 +45,7 @@ main {
     @media screen and (max-width: 900px) {
       padding: 20px 20px 10px 20px;
       justify-content: space-around;
+      border-radius: 0 0 8px 8px;
     }
     /*txt size and margin*/
     h1 {
