--- a/Style/layout/_main.scss
+++ b/Style/layout/_main.scss
@@ -83,7 +83,7 @@ main {
       letter-spacing: 0.5px;
     }
 
-    span p {
+    .txt1 p {
       color: $GrayishBlue;
     }
     /*set grey circle*/
